--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.btn {
+  @apply text-white border-2 px-4 py-2 w-24 rounded-xl tracking-wider hover:bg-slate-200 hover:text-slate-800;
+}
