--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,6 @@
   font-family: "Nunito Sans", sans-serif;
 }
 
-.btn {
+/* .btn {
   @apply text-white border-2 px-4 py-2 w-24 rounded-xl tracking-wider hover:bg-slate-200 hover:text-slate-800;
-}
+} */
